[package]
name = "quadtree_collisions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level =1

[profile.dev.package."*"]
opt-level =3

[dependencies]
bevy = {version = "0.13.2" }
rand = "0.8.5"

